plugins {
	id 'java'
	alias libs.plugins.spring.boot
	alias libs.plugins.spring.dependecy.management
}

dependencyManagement {
	imports {
		mavenBom("io.opentelemetry:opentelemetry-bom:1.37.0")
		mavenBom("io.opentelemetry.instrumentation:opentelemetry-instrumentation-bom-alpha:2.3.0-alpha")
	}
}

group = 'ch.sachi.services'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '21'
}

repositories {
	if (project.hasProperty('REPO1_URL')) {
		maven {
			url REPO1_URL
		}
	} else {
		mavenCentral()
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.opentelemetry.instrumentation:opentelemetry-spring-boot-starter'
	runtimeOnly 'io.opentelemetry.instrumentation:opentelemetry-logback-appender-1.0'
	runtimeOnly 'io.opentelemetry.instrumentation:opentelemetry-logback-mdc-1.0'

	implementation libs.flyway.core
	runtimeOnly libs.flyway.sqlserver
	runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

